Add post requests routes
