# controllers/album.js
@@ -2,7 +2,6 @@ const { ObjectId } = require('mongodb');
 const db = require('../db/connection');
 
 //GET REQUESTS
-
 const getAllAlbums = async (req, res) => {
   try {
     const data = await db.getDb().db('musicAPI').collection('albums').find();
@@ -22,7 +21,7 @@ const getSingleAlbum = async (req, res) => {
     const data = await db.getDb().db('musicAPI').collection('albums').find({ _id: idParam });
     data.toArray().then((data) => {
       if (data == '') {
-        res.status(404).send(data.error || idParam + ' Artist Not Found');
+        res.status(404).send(data.error || idParam + ' Album Not Found');
       } else {
         res.send(data).status(200);
       }
@@ -32,7 +31,29 @@ const getSingleAlbum = async (req, res) => {
   }
 };
 
+//POST REQUEST
+const postNewAlbum = async (req, res) => {
+  const album = {
+    title: req.body.title,
+    year: req.body.year,
+    genre: req.body.genre,
+    artist: req.body.artist,
+    totalSongs: req.body.totalSongs,
+    duration: req.body.duration
+  };
+
+  const createAlbum = await db.getDb().db('musicAPI').collection('albums').insertOne(album);
+
+  if (createAlbum.acknowledged) {
+    res.status(201).json(createAlbum);
+  } else {
+    console.log('Error');
+    res.status(500).send(createAlbum.error || 'Could not create album');
+  }
+};
+
 module.exports = {
   getAllAlbums,
-  getSingleAlbum
+  getSingleAlbum,
+  postNewAlbum
 };
